# ddd-mode-pacemaker-group-12-mirror

./: .gitignore  README.md
Documentation/Meeting Minutes/: Meeting1.docx
NiosII/QuartusDesign/software/Pacemaker/: UART.c  UART.h  buttons.c  buttons.h  fsm.c  fsm.h  hello_world.c  leds.c  leds.h  main.c  project.h  switches.c  switches.h  timer.c  timer.h
SCCharts/Matlab Testing Scripts/: 10kHao'sVisualiser.xlsx  NathanSiteEvaluation.asv  NathanSiteEvaluation.m
SCCharts/Matlab Testing Scripts/FSM_Rev4 Test Data/: test-1.csv  test-2.csv
SCCharts/Matlab Testing Scripts/FSM_Rev4v2 Hao's Test Data/: graph_data.csv  test-0.csv  test-1.csv  test-3.csv  test-4.csv
SCCharts/Matlab Testing Scripts/FSM_Rev4v2 Test Data/: ScriptOutput_Rev4v2.txt  test-1.csv  test-2.csv  test-3.csv  test-4.csv
SCCharts/Pacemaker/: Pacemaker.sctx
SCCharts/Pacemaker Rev2/FSM_Rev4 Test Data/: test-0.csv  test-3.csv  test-4.csv
SCCharts/Pacemaker Rev2/Pacemaker_Rev2/: .project  FSM.sctx  FSM_Rev2.sctx  FSM_Rev3.5.sctx  FSM_Rev3.sctx  FSM_Rev4.sctx  timing.h
SCCharts/TestingRig/: CMakeLists.txt  README.md  graph.xlsx  library.cpp  library.hpp  main.cpp
SCCharts/TestingRig/Debug/: graph2.xlsx
